# polydiv

./: Cargo.toml  README.md  kzg_results.py
benches/: kzg.rs
benches/csv_files/: commit_results.csv  new_results.csv  open_all_results.csv  open_results.csv  update_open_j_results.csv  update_results.csv  verify_results.csv
src/: benches.rs  fft.rs  kzg.rs  kzg_deriv.rs  kzg_fk.rs  kzg_original.rs  kzg_tabdfk.rs  lib.rs
